tests/ui/no_handler.stderr
error: unexpected end of input, expected an expression
 --> tests/ui/no_handler.rs:3:1
  |
3 | #[command(ok=)]
  | ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `command` (in Nightly builds, run with -Z macro-backtrace for more info)
